<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".NewsDetailActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/returnIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:maxWidth="200dp"
            android:src="@drawable/return_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:contentDescription="@string/app_name"
                android:src="@drawable/baseline_newspaper_24_orange" />

            <TextView
                android:id="@+id/app_titleTV"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:padding="0dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/app_real_name"
                android:textColor="@color/orange"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/gray"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/articleImageIV"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/animeNameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/score"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/scoreBtn"
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="5dp"
                    android:padding="1dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/scoredByTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/users"
                    android:textSize="11sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/streamingPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/streaming_platforms"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/streamingIconsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:text="@string/status"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/statusAnimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:text="@string/episodes"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/episodesAnimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:text="@string/duration"
                    android:textColor="@color/gray"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/durationAnimeTV"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/synopsis"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/synopsisTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/synopsis_background"
                android:lineSpacingExtra="4dp"
                android:padding="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/video_trailer"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/trailerIV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/video_trailer"

                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/playVideoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Play Video" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>